--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.11.16",
     "axios": "^1.3.5",
     "framer-motion": "^10.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
